[package]
name = "jolt_common"
version = "0.1.0"
edition = "2021"

authors = ["Yasir Shariff"]

description = "Jolt Common Module"
repository = "https://github.com/itsyaasir/jolt_common"
keywords = ["Jolt", "jolt"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json =  "1.0.79"
thiserror = "1.0.30"
axum = "0.4.5"